--- a/DHRFrontend/package.json
+++ b/DHRFrontend/package.json
@@ -38,6 +38,7 @@
     "@radix-ui/react-toggle": "latest",
     "@radix-ui/react-toggle-group": "latest",
     "@radix-ui/react-tooltip": "latest",
+    "@react-google-maps/api": "^2.20.7",
     "@react-spring/web": "^10.0.3",
     "@vercel/analytics": "latest",
     "autoprefixer": "^10.4.20",
@@ -50,6 +51,8 @@
     "framer-motion": "^12.23.25",
     "geist": "latest",
     "input-otp": "latest",
+    "leaflet": "^1.9.4",
+    "leaflet.heat": "^0.2.0",
     "lucide-react": "^0.454.0",
     "next": "^14.2.33",
     "next-themes": "latest",
@@ -58,6 +61,7 @@
     "react-dom": "^18",
     "react-hook-form": "latest",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^4.2.1",
     "react-resizable-panels": "latest",
     "react-transition-group": "^4.4.5",
     "recharts": "^3.5.1",
@@ -69,6 +73,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.9",
+    "@types/leaflet": "^1.9.21",
     "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
